fix: Remove the quotes
Former-commit-id: d15df7eee10a0c91c98ebe83f4d55c40eb3528be

--- a/Wrangle-OpenStreetMap-Data/.gitignore
+++ b/Wrangle-OpenStreetMap-Data/.gitignore
@@ -1,2 +1,2 @@
-"/Users/guanrongfu/GitHub/Udacity-DAND/Wrangle-OpenStreetMap-Data/chicago_illinois.osm.bz2"
-"/Users/guanrongfu/GitHub/Udacity-DAND/Wrangle-OpenStreetMap-Data/chicago_illinois.osm"
+/Users/guanrongfu/GitHub/Udacity-DAND/Wrangle-OpenStreetMap-Data/chicago_illinois.osm.bz2
+/Users/guanrongfu/GitHub/Udacity-DAND/Wrangle-OpenStreetMap-Data/chicago_illinois.osm
