--- a/Wrangle-OpenStreetMap-Data/.gitignore
+++ b/Wrangle-OpenStreetMap-Data/.gitignore
@@ -1,2 +1,2 @@
-/Users/guanrongfu/GitHub/Udacity-DAND/Wrangle-OpenStreetMap-Data/chicago_illinois.osm.bz2
-/Users/guanrongfu/GitHub/Udacity-DAND/Wrangle-OpenStreetMap-Data/chicago_illinois.osm
+/chicago_illinois.osm.bz2
+/chicago_illinois.osm
