feat: Ignore files related to project submission

--- a/Wrangle-OpenStreetMap-Data/.gitignore
+++ b/Wrangle-OpenStreetMap-Data/.gitignore
@@ -2,3 +2,5 @@
 /chicago_illinois.osm
 /project_documentation.txt
 /project_documentation.html
+/OpenStreetMap-Project-Chicago.html
+/Submission-Package.zip
